# talk_with_gpt

./: README.md  pyproject.toml
talk_with_gpt/: .gitignore  audio2txt.py  chat_with_gpt.py  play_audio.py  record_audio.py  record_speech.py  speech2txt.py  talk_with_bot.py  talk_with_chatgpt.py  txt2audio.py  txt2speech.py
