[tool.poetry]
name = "talk-with-gpt"
version = "0.1.0"
description = "talk with gpt with chinese"
authors = ["lucas-shao <lucas_shao@126.com>"]
readme = "README.md"
packages = [{include = "talk_with_gpt"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
